--- a/CorngoBot/CorngoBot.csproj
+++ b/CorngoBot/CorngoBot.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.1.1" />
     <PackageReference Include="DlibDotNet" Version="19.18.0.20200301" />
+    <PackageReference Include="Imgur.API" Version="4.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.2" />
